# Microvisor-HAL-STM32U5

./: .gitmodules  CMakeLists.txt  Dockerfile  LICENSE-STM32CubeU5.md  README.md  docker-entrypoint.sh  mv_bitops.h  mv_prescalers.c  toolchain.cmake
.github/workflows/: build.yml
Config/: stm32u5xx_hal_conf.h
Drivers/CMSIS/Device/ST/STM32U5xx/Source/Templates/: system_stm32u5xx.c  system_stm32u5xx_s.c
Drivers/STM32U5xx_HAL_Driver/Inc/: stm32u5xx_hal_dsi.h  stm32u5xx_hal_flash.h  stm32u5xx_hal_gpu2d.h  stm32u5xx_hal_ltdc.h  stm32u5xx_hal_rcc.h  stm32u5xx_hal_rcc_ex.h  stm32u5xx_hal_xspi.h  stm32u5xx_ll_bus.h  stm32u5xx_ll_rcc.h  stm32u5xx_ll_system.h
Drivers/STM32U5xx_HAL_Driver/Src/: stm32u5xx_hal_cortex.c  stm32u5xx_hal_flash_ex.c  stm32u5xx_hal_gpio.c  stm32u5xx_hal_gpu2d.c  stm32u5xx_hal_ltdc.c  stm32u5xx_hal_rcc.c  stm32u5xx_hal_rcc_ex.c  stm32u5xx_hal_xspi.c  stm32u5xx_ll_rcc.c
